--- a/Yapbam/src/localization/fr/relnotes.txt
+++ b/Yapbam/src/localization/fr/relnotes.txt
@@ -8,6 +8,8 @@ improvement
 version	0.11.12 (20/11/2012)
 fix
 	Il était possible de créer une opération périodique avec une date de prochaine opération postérieure à la date de fin de l'opération périodique.
+improvement
+	Le dialogue de génération des opérations périodiques est maintenant redimensionnable. 
 
 version	0.11.11 (17/11/2012)
 fix
