--- a/Yapbam/src/localization/relnotes.txt
+++ b/Yapbam/src/localization/relnotes.txt
@@ -8,6 +8,8 @@ improvement
 version	0.11.12 (11/20/2012)
 fix
 	It was possible to create a periodical transaction with a next transaction's date after the end date of the periodical transaction.
+improvement
+	The periodical transactions generation dialog is now resizable.
 
 version	0.11.11 (11/17/2012)
 fix
