--- a/src/localization/fr/relnotes.txt
+++ b/src/localization/fr/relnotes.txt
@@ -5,9 +5,10 @@ known
 improvement
 	Yapbam peut être connecté à un compte Dropbox de manière à partager vos données entre plusieurs ordinateurs via Internet, et bénéficier des fonctions de sauvegarde de Dropbox.
 
-version	0.11.12 (20/11/2012)
+version	0.11.12 (24/11/2012)
 fix
 	Il était possible de créer une opération périodique avec une date de prochaine opération postérieure à la date de fin de l'opération périodique.
+	Lorsqu'on changeait l'ordre des colonnes de l'onglet "Bilan des comptes", la ligne "Total" restait figée. 
 improvement
 	Le dialogue de génération des opérations périodiques est maintenant redimensionnable. 
 
