--- a/src/localization/relnotes.txt
+++ b/src/localization/relnotes.txt
@@ -5,9 +5,10 @@ known
 improvement
 	Yapbam will be able to be connected to a Dropbox account in order to share data across Internet and backup it through built-in Dropbox functions.
 
-version	0.11.12 (11/20/2012)
+version	0.11.12 (11/24/2012)
 fix
 	It was possible to create a periodical transaction with a next transaction's date after the end date of the periodical transaction.
+	When changing the order of columns in the tab "Account Summary", the "Total" row remained frozen. 
 improvement
 	The periodical transactions generation dialog is now resizable.
 
