--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -1062,7 +1062,7 @@ FileChooserPanel.tooltip.open=Selectionnez cet onglet pour lire à partir d'un su
 
 #Wordings related to the dropbox tab of the file selection dialog
 dropbox.Chooser.ConnectionDialog.title=Connexion à Dropbox
-dropbox.Chooser.ConnectionDialog.message.content=<html>Yapbam aura juste accès à un répertoire particulier (/Applications/Yapbam), et pas à l''intégralité de votre compte.<br><br>Cliquer le bouton \"<b>{0}</b>\" quand vous serez prêt à lier Yapbam et votre compte Dropbox (requiert une connexion Internet et un compte Dropbox)<br>Une fenêtre de navigateur Internet s''ouvrira alors, vous invitant à autoriser Yapbam à accéder à votre compte Dropbox.<br><br><b>Après</b> avoir autorisé cet accès, cliquer sur le bouton "<b>{1}</b>"</html>
+dropbox.Chooser.ConnectionDialog.message.content=<html>Yapbam aura juste accès à un répertoire particulier (/Applications/Yapbam), et pas à l''intégralité de votre compte.<br><br>Cliquer le bouton \"<b>{0}</b>\" quand vous serez prêt à lier Yapbam et votre compte Dropbox (requiert une connexion Internet et un compte Dropbox).<br>Une fenêtre de navigateur Internet s''ouvrira alors, vous invitant à autoriser Yapbam à accéder à votre compte Dropbox.<br><br><b>Après</b> avoir autorisé cet accès, cliquer sur le bouton "<b>{1}</b>"</html>
 dropbox.Chooser.ConnectionDialog.message.header=<html>Stocker vos données sur <b>Dropbox</b> requiert que vous autorisiez Yapbam à accéder à votre compte Dropbox.</html>
 dropbox.Chooser.ConnectionDialog.startButton=Se connecter
 dropbox.Chooser.ConnectionDialog.startButton.tooltip=Cliquer sur ce bouton pour démarrer le processus d'autoriser d'accès par Yapbam à votre compte Dropbox
