--- a/src/Resources_pt.properties
+++ b/src/Resources_pt.properties
@@ -958,7 +958,7 @@ TransferDialog.errorValueDate=Este botão fica disabilitado por que o valor da da
 
 #----------------------------------
 #New preference sub-panel to set the background colors of the transaction table
-MainFrame.Transactions.Preferences.customBackground.title=Use cores customizadas para o fundo da table
+MainFrame.Transactions.Preferences.customBackground.title=Use cores customizadas para o fundo da tabela
 MainFrame.Transactions.Preferences.customBackground.tooltip=Selecione esta caixa para ter cores customizadas de fundo
 MainFrame.Transactions.Preferences.expenseSample=Gastos
 MainFrame.Transactions.Preferences.receiptSample=Recibos
@@ -990,7 +990,7 @@ Backup.preference.disk.select.tooltip=Clique nest botão para escolher onde salva
 Backup.preference.ftp.ftp=FTP
 Backup.preference.ftp.ftp.tooltip=Selecione este para fazer um backup eum servidor FTP
 Backup.preference.ftp.server=Servidor:
-Backup.preference.ftp.server.tooltip=Digite o name do host do ftp
+Backup.preference.ftp.server.tooltip=Digite o nome do host do ftp
 Backup.preference.ftp.directory=Diretório:
 Backup.preference.ftp.directory.tooltip=Digite o path do diretório remoto onde você que armazenar seus dados
 Backup.preference.ftp.user.tooltip=Digite a conta a ser usada para conectar no servidor
@@ -1074,37 +1074,37 @@ FileChooserPanel.tooltip.save=Selecione este guia para salvar dados para o armaz
 FileChooserPanel.tooltip.open=Selecione esta guia para ler dados do seu local de armazenamento
 
 #Wordings related to the dropbox tab of the file selection dialog
-dropbox.Chooser.ConnectionDialog.title=Connect to Dropbox
-dropbox.Chooser.ConnectionDialog.message.content=<html>Yapbam will only have access to a specific folder (/Applications/Yapbam), not your whole account.<br><br>Click the \"<b>{0}</b>\" button when you are ready to link Yapbam to your account (requires an Internet connection)<br>Then, you will be redirected to a browser window where Dropbox will ask you to grant access to Yapbam.<br><br><b>After</b> you''ve granted access to Dropbox click the "<b>{1}</b>" button</html>
-dropbox.Chooser.ConnectionDialog.message.header=<html>Storing data to <b>Dropbox</b> requires that you authorize Yapbam to access your Dropbox account.</html>
-dropbox.Chooser.ConnectionDialog.startButton=Start Connection
-dropbox.Chooser.ConnectionDialog.startButton.tooltip=Click this button to start the connection process.
-dropbox.Chooser.ConnectionDialog.accessNotGranted=It seems you didn't grant access to Yapbam, please retry.
-dropbox.Chooser.ConnectionDialog.unexpectedError=An unexpected error occurred while connecting to Dropbox.
-dropbox.Chooser.ConnectionDialog.error.processNotStarted=<html>You may click the <b>{0}</b> button first.</html>
-dropbox.Chooser.ConnectionDialog.error.unableToLaunchBrowser.message=Sorry, an unexpected error occurred while launching the browser.
-dropbox.Chooser.ConnectionDialog.error.unableToLaunchBrowser.title=Unable to launch browser
+dropbox.Chooser.ConnectionDialog.title=Conecta to Dropbox
+dropbox.Chooser.ConnectionDialog.message.content=<html>Yapbam somente ter acesso a arquivos especificado (/Applications/Yapbam), e não a sua conta completa.<br><br>Click the \"<b>{0}</b>\" botão quando você estiver pronto para o link to Yapbam para a sua conta (precisa de uma conecção a Internet)<br>Depois, voce sera redirecionado para uma tela do browser onde o Dropbox ira perguntar a você para permitir acesso ao Yapbam.<br><br><b>After</b> Você deu permissão ao acesso para o Dropbox e clique no "<b>{1}</b>" botão</html>
+dropbox.Chooser.ConnectionDialog.message.header=<html>Armazenando dados para <b>Dropbox</b> requere que você autorize o Yapbam acesse sua conta no Dropbox.</html>
+dropbox.Chooser.ConnectionDialog.startButton=Inicia Conecção
+dropbox.Chooser.ConnectionDialog.startButton.tooltip=Clique neste botão para iniciar o processo de conecção.
+dropbox.Chooser.ConnectionDialog.accessNotGranted=Parece que você não autorizou o acesso ao Yapbam, por favor tente de novo.
+dropbox.Chooser.ConnectionDialog.unexpectedError=Um erro inesperado ocorreu enquanto conectando ao Dropbox.
+dropbox.Chooser.ConnectionDialog.error.processNotStarted=<html>Voce poderia clicar no <b>{0}</b> botão primeiro.</html>
+dropbox.Chooser.ConnectionDialog.error.unableToLaunchBrowser.message=Desculpa, um erro inesperado ocorreu enquando estava carregando o browser.
+dropbox.Chooser.ConnectionDialog.error.unableToLaunchBrowser.title=Não foi possível carregar o browser
 
-dropbox.Chooser.read.tabTooltip=Select this tab to read data from your Dropbox account
-dropbox.Chooser.save.tabTooltip=Select this tab to save to your Dropbox account
-dropbox.Chooser.connecting=Connecting to Dropbox...
-dropbox.Chooser.account=Account: {0}
+dropbox.Chooser.read.tabTooltip=Selecione esta guia para ler dados na sua conta Dropbox
+dropbox.Chooser.save.tabTooltip=Selecione esta guia para salvar na sua conta Dropbox
+dropbox.Chooser.connecting=Conectando ao Dropbox...
+dropbox.Chooser.account=Conta: {0}
 #first argument is the available space, second is the unit
-dropbox.Chooser.freeSpace={0}{1} free
+dropbox.Chooser.freeSpace={0}{1} disponível
 dropbox.Chooser.refresh=Refresh
-dropbox.Chooser.refresh.tooltip=Click this button to refresh the file list according to Dropbox content
-dropbox.Chooser.disconnect=Disconnect
-dropbox.Chooser.disconnect.tooltip=Click this button to disconnect from current account and connect to another
-dropbox.Chooser.selectedFile=File: 
-dropbox.Chooser.error.connectionFailed=<html>Unable to connect to Dropbox.<br>It seems you are not connected to the Internet</html>
+dropbox.Chooser.refresh.tooltip=Clique neste botão para efetuar o refresh da lista de arquivos de acordo com o conteúdo do Dropbox
+dropbox.Chooser.disconnect=Disconnecta
+dropbox.Chooser.disconnect.tooltip=Clique neste botão para disconectar da conta atual e conectar à outra
+dropbox.Chooser.selectedFile=Arquivo: 
+dropbox.Chooser.error.connectionFailed=<html>Não foi possível conectar ao Dropbox.<br>Parece que você não está conectado a Internet</html>
 
-#Wordings related to the synchronization with Dropbox
-dropbox.conflict=Both data stored on your computer and the one on Dropbox were modified.
-dropbox.dropbox.remoteDeleted=That file doesn't exist anymore on Dropbox.
-dropbox.downloading=Downloading from Dropbox ...
-dropbox.uploading=Uploading to Dropbox ...
-dropbox.download.action=Download Dropbox data to computer
-dropbox.upload.action=Upload computer data to Dropbox
+#Wordings related to the synchronization with Dropbox 
+dropbox.conflict=Ambos dados armazenados no seu computador e no Dropbox foram modificados.
+dropbox.dropbox.remoteDeleted=Aquele arquivo não existe mais no Dropbox.
+dropbox.downloading=Baixando do Dropbox ...
+dropbox.uploading=Subindo para o Dropbox ...
+dropbox.download.action=Baixar dados do Dropbox para o computador
+dropbox.upload.action=Subir dados do computador para o Dropbox
 
 #Wordings related to data size units
 Generic.data.unit.bytes=bytes
@@ -1113,21 +1113,21 @@ Generic.data.unit.MBytes=MB
 Generic.data.unit.GBytes=GB
 
 #Wordings related to general synchronization process
-synchronization.synchronizing=Synchronizing ...
-synchronization.downloading=Downloading ...
-synchronization.uploading=Uploading ...
-synchronization.question.cancelled=<html>You cancelled the synchronization.<br><br>Would you like to open the copy stored on your computer?</html>
-synchronization.question.failed=<html>Synchronization failed.<br><br>Would you like to open the copy stored on your computer?</html>
-synchronization.question.cacheCorrupted=<html>Sorry, unable to read the local data.<br>Maybe this data is corrupted<br><br>Do you want to try downloading it again?
-synchronization.question.other=<html>{0}<br><br>What do you want to do?<br></html>
-synchronization.deleteCache.action=Delete data on the computer
-synchronization.downloadFailed=Sorry, unable to download the data
+synchronization.synchronizing=Sincronizando ...
+synchronization.downloading=Baixando ...
+synchronization.uploading=Subindo ...
+synchronization.question.cancelled=<html>Você cancelou a sincronizacao.<br><br>Voce gostaria de abrir a copia armazenada no seu computador?</html>
+synchronization.question.failed=<html>Sincronização falhou.<br><br>Você gostaria de abrir a copia armazenada no seu computador?</html>
+synchronization.question.cacheCorrupted=<html>Desculpa, não foi possível ler dados local.<br>Talvez os dados estão corruptos<br><br>Você quer tentar baixar de novo?
+synchronization.question.other=<html>{0}<br><br>O que você quer fazer?<br></html>
+synchronization.deleteCache.action=Deletar dados no computador
+synchronization.downloadFailed=Desculpa, não foi possível baixar os dados
 
 #More precise error messages when the imported file is unknown
-ImportDialog.error.unknownFile=<html>IO arquivo importado não é encontrado.<br>Talvez você destruiu ou renomeados após a seleção.</html>
+ImportDialog.error.unknownFile=<html>IO arquivo importado não foi encontrado.<br>Talvez você deletou ou renomeou após a seleção.</html>
 
 #In the generate periodical transactions dialog, the previous ignored column will be split in two columns.
-#GeneratePeriodicalTransactionsDialog.ignored=Ignored
+#GeneratePeriodicalTransactionsDialog.ignored=Ignorado
 GeneratePeriodicalTransactionsDialog.cancelled=Cancelado
 GeneratePeriodicalTransactionsDialog.postponed=Adiado
 
@@ -1136,12 +1136,12 @@ AccountManager.editAccount.toolTip=Edita a conta selecionada
 
 AccountDialog.alertThresholdLess=Alerta se o saldo for inferior a:
 AccountDialog.alertThresholdMore=Alerta se o saldo for superior:
-AccountDialog.alertThresholdLess.tooltip=Digite o mini balança antes de disparar um alerta (deixe em branco para definir sem limite)
-AccountDialog.alertThresholdMore.tooltip=Digite o máximo de equilíbrio antes de disparar um alerta (deixe em branco para definir sem limite)
+AccountDialog.alertThresholdLess.tooltip=Digite o valor minímo antes de disparar um alerta (deixe em branco para definir sem limite)
+AccountDialog.alertThresholdMore.tooltip=Digite o valor máximo antes de disparar um alerta (deixe em branco para definir sem limite)
 
-AccountDialog.err4=Desativada, pois o equilíbrio mini é incorreta
-AccountDialog.err5=Desativado porque o máximo de equilíbrio é incorreto
-AccountDialog.err6=Desativada porque o limiar de alarme máximo é abaixo do mínimo.
+AccountDialog.err4=Desativada, por que o valor minímo não é correto
+AccountDialog.err5=Desativado por que o valor máximo não é correto
+AccountDialog.err6=Desativada por que o valor minímo é maior do que o valor máximo.
 
 #This tip was missing in the account administration panel
 checkbookDialog.Edit.tooltip=Edita o talão de cheques selecionado
