--- a/src/Resources_pt.properties
+++ b/src/Resources_pt.properties
@@ -1075,13 +1075,13 @@ FileChooserPanel.tooltip.open=Selecione esta guia para ler dados do seu local de
 
 #Wordings related to the dropbox tab of the file selection dialog
 dropbox.Chooser.ConnectionDialog.title=Conecta to Dropbox
-dropbox.Chooser.ConnectionDialog.message.content=<html>Yapbam somente ter acesso a arquivos especificado (/Applications/Yapbam), e não a sua conta completa.<br><br>Click the \"<b>{0}</b>\" botão quando você estiver pronto para o link to Yapbam para a sua conta (precisa de uma conecção a Internet)<br>Depois, voce sera redirecionado para uma tela do browser onde o Dropbox ira perguntar a você para permitir acesso ao Yapbam.<br><br><b>After</b> Você deu permissão ao acesso para o Dropbox e clique no "<b>{1}</b>" botão</html>
+dropbox.Chooser.ConnectionDialog.message.content=<html>Yapbam somente tera acesso a arquivos específicos (/Aplicação/Yapbam), e não a sua conta completa.<br><br>Clique no \"<b>{0}</b>\" botão quando você estiver pronto para o link to Yapbam para a sua conta (precisa de uma conecção a Internet)<br>Depois, você sera redirecionado para uma tela do browser onde o Dropbox ira perguntar a você para permitir acesso ao Yapbam.<br><br><b>Depois</b> você deu permissão ao acesso para o Dropbox e clique no "<b>{1}</b>" botão</html>
 dropbox.Chooser.ConnectionDialog.message.header=<html>Armazenando dados para <b>Dropbox</b> requere que você autorize o Yapbam acesse sua conta no Dropbox.</html>
 dropbox.Chooser.ConnectionDialog.startButton=Inicia Conecção
 dropbox.Chooser.ConnectionDialog.startButton.tooltip=Clique neste botão para iniciar o processo de conecção.
 dropbox.Chooser.ConnectionDialog.accessNotGranted=Parece que você não autorizou o acesso ao Yapbam, por favor tente de novo.
 dropbox.Chooser.ConnectionDialog.unexpectedError=Um erro inesperado ocorreu enquanto conectando ao Dropbox.
-dropbox.Chooser.ConnectionDialog.error.processNotStarted=<html>Voce poderia clicar no <b>{0}</b> botão primeiro.</html>
+dropbox.Chooser.ConnectionDialog.error.processNotStarted=<html>Você poderia clicar no <b>{0}</b> botão primeiro.</html>
 dropbox.Chooser.ConnectionDialog.error.unableToLaunchBrowser.message=Desculpa, um erro inesperado ocorreu enquando estava carregando o browser.
 dropbox.Chooser.ConnectionDialog.error.unableToLaunchBrowser.title=Não foi possível carregar o browser
 
@@ -1116,7 +1116,7 @@ Generic.data.unit.GBytes=GB
 synchronization.synchronizing=Sincronizando ...
 synchronization.downloading=Baixando ...
 synchronization.uploading=Subindo ...
-synchronization.question.cancelled=<html>Você cancelou a sincronizacao.<br><br>Voce gostaria de abrir a copia armazenada no seu computador?</html>
+synchronization.question.cancelled=<html>Você cancelou a sincronização.<br><br>Você gostaria de abrir a copia armazenada no seu computador?</html>
 synchronization.question.failed=<html>Sincronização falhou.<br><br>Você gostaria de abrir a copia armazenada no seu computador?</html>
 synchronization.question.cacheCorrupted=<html>Desculpa, não foi possível ler dados local.<br>Talvez os dados estão corruptos<br><br>Você quer tentar baixar de novo?
 synchronization.question.other=<html>{0}<br><br>O que você quer fazer?<br></html>
