--- a/Yapbam/src/localization/fr/relnotes.txt
+++ b/Yapbam/src/localization/fr/relnotes.txt
@@ -13,7 +13,7 @@ fix
 	Changer la casse d'une lettre dans le nom d'un compte provoquait une erreur.
 	La sauvegarde du filtre à la fermeture de Yapbam provoquait une erreur si le filtre comportait une restriction sur le numéro ou le relevé, mais pas sur le libellé d'opération.
 improvement
-	Le dialogue de génération des opérations périodiques est maintenant redimensionnable. On peut la trier, et un bouton permet d'éditer l'opération sélectionnée.
+	Le dialogue de génération des opérations périodiques est maintenant redimensionnable. La table des opérations générées peut-être triée, et un bouton permet d'éditer l'opération sélectionnée. Les opérations peuvent à présent être reportées.
 	La table "Opérations" de l'onglet "Historique du solde" peut à présent être triée dans de l'opération la plus récente vers la plus ancienne.  
 
 version	0.11.11 (17/11/2012)
