--- a/src/localization/relnotes.txt
+++ b/src/localization/relnotes.txt
@@ -13,7 +13,7 @@ fix
 	Changing the case of a letter in an account's name caused an error.
 	Closing Yapbam caused an error when the filter had a restriction on the number or statement, but not on the description of transactions.
 improvement
-	The periodical transactions generation dialog is now resizable. It can be sorted, and a button edits the selected transaction.
+	The periodical transactions generation dialog is now resizable. The transaction table can be sorted, and a button edits the selected transaction. Transaction can be postponed.
 	The "Transactions" table of the "Balance History" tab can now be sorted from the newest transaction to the oldest.
 
 version	0.11.11 (11/17/2012)
