--- a/src/localization/relnotes.txt
+++ b/src/localization/relnotes.txt
@@ -5,6 +5,10 @@ known
 improvement
 	Yapbam will be able to be connected to a Dropbox account in order to share data across Internet and backup it through built-in Dropbox functions.
 
+version	0.12.1 (12/03/2012)
+fix
+	Bug of version 0.12.0: When a periodical transaction reaches its end date, an error occurs.
+
 version	0.12.0 (12/02/2012)
 fix
 	It was possible to create a periodical transaction with a next transaction's date after the end date of the periodical transaction.
