--- a/src/net/yapbam/gui/tools/messages.properties
+++ b/src/net/yapbam/gui/tools/messages.properties
@@ -15,3 +15,7 @@ CurrencyConverterPanel.ToCurrencyColumnName=1 {0} = ? currency
 
 ToolsPlugin.currencyConverter.ioErrorMessage=<html>An error occurred while communicating with the European Central Bank.<br>Make sure your Internet connection is working.</html>
 ToolsPlugin.currencyConverter.wait.message=<html>Download of currency from the European Central Bank.<br>Thank you for your patience.</html>
+
+#Adds a calculator in the tools menu
+ToolsPlugIn.calculator.title=Calculator
+ToolsPlugIn.calculator.toolTip=Opens a calculator
