--- a/src/net/yapbam/gui/tools/messages_fr.properties
+++ b/src/net/yapbam/gui/tools/messages_fr.properties
@@ -14,3 +14,7 @@ CurrencyConverterPanel.CodeColumnName=Code
 CurrencyConverterPanel.CurrencyColumnName=Devise
 CurrencyConverterPanel.CurrencyToColumnName=1 devise = ? {0}
 CurrencyConverterPanel.ToCurrencyColumnName=1 {0} = ? devises
+
+#Adds a calculator in the tools menu
+ToolsPlugIn.calculator.title=Calculatrice
+ToolsPlugIn.calculator.toolTip=Affiche la calculatrice
